<resources>
    <string name="welcome_message">Welcome To Credit</string>
    <string name="follow_up_and_speed">follow-up and speed up collection.
    Your data is always backed up.
    Take control of your finances.</string>
    <string name="lets_start">Let\'s Start</string>
    <string name="start">Let\'s Start</string>
    <string name="view_report">View Report</string>
    <string name="Book">Book</string>
    <string name="operations">Operations</string>
    <string name="dateOpertion">Date</string>
    <string name="jaipris">J\'ai pris</string>
    <string name="jaidonne">J\'ai donné</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">home</string>
    <string name="update_details">Update Details</string>
    <string name="title_activity_test">Test</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="add_supplier">Add Supplier</string>
    <string name="search_for_a_supplier">Search for a supplier</string>
    <string name="transaction_2">Transaction (2)</string>
</resources>
