<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/DarkBlue"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".Activities.WelcomeActivity">

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="387dp"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textview"
            android:layout_width="289dp"
            android:layout_height="58dp"
            android:fontFamily="fantasy"
            android:shadowRadius="8"
            android:text="@string/welcome_message"
            android:textAlignment="center"
            android:textColor="@color/LightGray"
            android:textSize="30sp"
            android:textStyle="bold"
            android:typeface="monospace"

            />

        <TextView
            android:id="@+id/textview2"
            android:layout_width="95dp"
            android:layout_height="56dp"
            android:fontFamily="fantasy"
            android:shadowRadius="8"
            android:text="@string/Book"
            android:textAlignment="center"
            android:textColor="@color/Orange2"
            android:textSize="30sp"
            android:textStyle="bold"

            android:typeface="monospace" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="388dp"
        android:layout_height="127dp"
        android:text="@string/follow_up_and_speed"
        android:textColor="@color/Gray2"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6"
        app:layout_constraintVertical_bias="0.053" />

    <Button
        android:id="@+id/Next_btn3"

        android:layout_width="143dp"
        android:layout_height="63dp"
        android:background="@drawable/round_button"
        android:fontFamily="monospace"
        android:padding="8dp"
        android:text="@string/start"

        android:textColor="@color/LightGray"
        android:textSize="16sp"

        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.871" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="212dp"
        android:layout_height="228dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075"
        app:srcCompat="@drawable/man" />


</androidx.constraintlayout.widget.ConstraintLayout>
